--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="tw-w-full tw-h-full tw-bg-background">
 
     <div class="tw-w-full tw-h-screen tw-flex tw-items-center tw-fixed tw-top-0 tw-overflow-hidden">
-        <div class="box"></div>
+        <div class="circle"></div>
     </div>
 
     <div class="tw-w-full tw-h-fit tw-sticky tw-top-0 tw-flex tw-justify-between tw-items-center tw-z-50">
