--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -1,10 +1,10 @@
-.box{
+.circle{
     @apply tw-w-96 tw-h-96 tw-bg-circle;
     border-radius: 64% 36% 45% 55% / 30% 53% 47% 70% ;
-    animation: box-animation 20s infinite linear;
+    animation: circle-animation 20s infinite linear;
 }
 
-@keyframes box-animation { 
+@keyframes circle-animation { 
     0% {
         transform: rotate(0deg) 
         translateY(300px) rotate(0deg);
