--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="tw-w-full tw-h-full tw-bg-background">
+<div class="tw-w-full tw-h-full">
 
     <div class="tw-w-full tw-h-screen tw-flex tw-items-center tw-fixed tw-top-0 tw-overflow-hidden">
         <div class="circle"></div>
@@ -6,19 +6,19 @@
 
     <div class="tw-w-full tw-h-fit tw-sticky tw-top-0 tw-flex tw-justify-between tw-items-center tw-z-50">
         <img class="tw-w-20 tw-h-20 tw-object-contain tw-mx-4" src="assets/icons/logo.svg"/>
-        <p class="tw-font-inter tw-font-medium tw-text-base tw-text-white tw-mx-4">
-            <span (click)="setLanguage(lang)" [ngClass]="selectedLanguage == lang ? 'tw-text-primary' : ''" *ngFor="let index = index; let lang of languages">{{lang | uppercase}}<span class="tw-text-white tw-px-2" *ngIf="(index + 1) < languages.length">/</span></span>
+        <p class="tw-font-inter tw-font-medium tw-text-base tw-mx-4 md:tw-mx-8">
+            <span (click)="setLanguage(lang)" [ngClass]="selectedLanguage == lang ? 'tw-text-primary hover:tw-text-quaternary' : 'tw-text-white hover:tw-text-gray'" *ngFor="let index = index; let lang of languages">{{lang | uppercase}}<span class="tw-text-white hover:tw-text-white tw-px-2" *ngIf="(index + 1) < languages.length">/</span></span>
         </p>
     </div>
     <div class="tw-w-full tw-h-fit tw-flex tw-overflow-hidden">
         <div class="tw-w-full tw-max-h-screen tw-overflow-auto scrollbar-hide tw-z-30 -tw-mt-20">
-            <div class="tw-w-full tw-h-screen tw-flex tw-flex-col tw-justify-evenly tw-items-center">
-                <h4 class="tw-w-full tw-h-fit tw-font-inter tw-font-medium tw-text-2xl tw-text-white tw-tracking-wide tw-leading-loose tw-pl-8 tw-pr-14"><span class="tw-text-3xl">👋</span> {{'hey-there' | translate}}, <br>I'm <span class="tw-font-robotomono tw-font-bold tw-text-primary">Atdhe Bajrami</span> <br>a <span class="tw-font-robotomono tw-font-bold tw-text-primary">Software Engineer</span> <br>from Kosovo 🇽🇰</h4>
-                <div class="tw-w-full tw-h-fit tw-flex tw-justify-center tw-items-center tw-px-14">
-                    <button class="tw-w-fit tw-h-fit tw-font-robotomono tw-font-medium tw-text-base tw-bg-primary tw-text-white tw-rounded-[5px] tw-py-4 tw-px-10">Contact Me</button>
+            <div class="tw-w-full tw-h-screen tw-flex tw-flex-col tw-justify-evenly">
+                <h4 class="tw-w-full tw-h-fit tw-font-inter tw-font-medium tw-text-2xl tw-text-white tw-tracking-wide tw-leading-loose tw-pl-8 md:tw-pl-16 tw-pr-14 md:tw-pr-28"><span class="tw-text-3xl">👋</span> {{'hey-there' | translate}}, I'm <span class="tw-font-robotomono tw-font-bold tw-text-primary hover:tw-text-quaternary">Atdhe Bajrami</span> a <span class="tw-font-robotomono tw-font-bold tw-text-primary hover:tw-text-quaternary">Software Engineer</span> from <span class="tw-font-robotomono tw-font-bold tw-text-primary hover:tw-text-quaternary">Kosovo</span> 🇽🇰</h4>
+                <div class="tw-w-full tw-h-fit tw-flex tw-justify-center tw-items-center tw-px-14 md:tw-px-28">
+                    <button class="tw-w-fit tw-h-fit tw-font-robotomono tw-font-medium tw-text-base tw-bg-primary hover:tw-bg-quaternary tw-text-white tw-rounded-[5px] tw-py-4 tw-px-10">Contact Me</button>
                 </div>
             </div>
-            <div class="tw-w-full tw-h-screen tw-pl-8 tw-pr-14">
+            <div class="tw-w-full tw-h-screen tw-pl-8 md:tw-pl-16 tw-pr-14 md:tw-pr-28">
                 <h4 class="tw-w-full tw-h-fit tw-font-robotomono tw-font-medium tw-text-xl tw-text-white tw-mb-8">Skills</h4>
                 <div class="tw-w-full tw-h-fit tw-max-h-[70vh] tw-flex tw-flex-col md:tw-flex-row md:tw-flex-wrap tw-gap-4 tw-overflow-auto tw-pr-2">
                     <div *ngFor="let skill of skills" class="max-md:tw-flex-1 md:tw-grow tw-bg-white tw-flex tw-justify-center tw-items-center tw-rounded-[5px] tw-p-4">
@@ -33,10 +33,10 @@
             <div class="tw-w-full tw-h-screen"></div>
         </div>
         <div class="tw-w-fit tw-h-screen tw-flex tw-flex-col tw-justify-center tw-items-center tw-gap-4 tw-fixed tw-right-0 tw-px-4 tw-z-40 -tw-mt-20">
-            <div class="tw-w-4 tw-h-[1px] tw-bg-white"></div>
-            <div class="tw-w-6 tw-h-[2px] tw-bg-primary"></div>
-            <div class="tw-w-4 tw-h-[1px] tw-bg-white"></div>
-            <div class="tw-w-4 tw-h-[1px] tw-bg-white"></div>
+            <div class="tw-w-4 tw-h-[1px] tw-bg-white hover:tw-bg-gray"></div>
+            <div class="tw-w-6 tw-h-[2px] tw-bg-primary hover:tw-bg-quaternary"></div>
+            <div class="tw-w-4 tw-h-[1px] tw-bg-white hover:tw-bg-gray"></div>
+            <div class="tw-w-4 tw-h-[1px] tw-bg-white hover:tw-bg-gray"></div>
         </div>
     </div>
 </div>
