--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -1,45 +1,36 @@
-.circle{
-    @apply tw-w-96 tw-h-96 tw-bg-circle;
-    border-radius: 64% 36% 45% 55% / 30% 53% 47% 70% ;
-    animation: circle-animation 20s infinite linear;
-}
-
-@keyframes circle-animation { 
+@keyframes rotate {
     0% {
-        transform: rotate(0deg) 
-        translateY(300px) rotate(0deg);
-        border-radius: 64% 36% 45% 55% / 30% 53% 47% 70% ;
-    }
-    10% {
-        border-radius: 73% 27% 56% 44% / 24% 62% 38% 76% ;
-    }
-    20% {
-        border-radius: 54% 46% 73% 27% / 43% 73% 27% 57% ;
-    }
-    30% {
-        border-radius: 32% 68% 50% 50% / 53% 51% 49% 47% ;
-    }
-    40% {
-        border-radius: 56% 44% 34% 66% / 63% 30% 70% 37% ;
-    }
-    50% {
-        border-radius: 64% 36% 45% 55% / 30% 53% 47% 70% ;
-    }
-    60% {
-        border-radius: 73% 27% 56% 44% / 24% 62% 38% 76% ;
-    }
-    70% {
-        border-radius: 54% 46% 73% 27% / 43% 73% 27% 57% ;
-    }
-    80% {
-        border-radius: 32% 68% 50% 50% / 53% 51% 49% 47% ;
-    }
-    90% {
-        border-radius: 56% 44% 34% 66% / 63% 30% 70% 37% ;
+        transform: rotate(0deg);
     }
     100% {
-        transform: rotate(360deg) 
-        translateY(300px) rotate(-360deg);
-        border-radius: 64% 36% 45% 55% / 30% 53% 47% 70% ;
+        transform: rotate(360deg);
     }
-} 
+}
+
+.out-top {
+    animation: rotate 20s linear infinite;
+    transform-origin: 13px 25px;
+}
+
+.in-top {
+    animation: rotate 10s linear infinite;
+    transform-origin: 13px 25px;
+}
+
+.out-bottom {
+    animation: rotate 25s linear infinite;
+    transform-origin: 84px 93px;
+}
+
+.in-bottom {
+    animation: rotate 15s linear infinite;
+    transform-origin: 84px 93px;
+}
+
+.scroll-snap-container{
+    scroll-snap-type: y mandatory;
+}
+
+.scroll-snap-item{
+    scroll-snap-align: start;
+}
