--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -21,13 +21,13 @@
     <!-- Content -->
     <div class="tw-w-full tw-h-fit tw-flex tw-overflow-hidden">
         <div (scroll)="onScroll($event)" class="tw-w-full tw-max-h-screen tw-overflow-auto scrollbar-hide tw-z-30 -tw-mt-20 scroll-snap-container">
-            <div #elementOne class="tw-w-full tw-h-screen tw-flex tw-flex-col tw-justify-evenly tw-scroll-m-20 scroll-snap-item">
+            <div #elementOne class="tw-w-full tw-h-screen tw-flex tw-flex-col tw-justify-evenly scroll-snap-item">
                 <h4 class="tw-w-full tw-h-fit tw-font-inter tw-font-medium tw-text-2xl tw-text-white tw-tracking-wide tw-leading-loose tw-pl-8 md:tw-pl-16 tw-pr-14 md:tw-pr-28"><span class="tw-text-3xl">👋</span> {{'hey-there' | translate}}, I'm <span class="tw-font-robotomono tw-font-bold tw-text-primary hover:tw-text-quaternary">Atdhe Bajrami</span> a <span class="tw-font-robotomono tw-font-bold tw-text-primary hover:tw-text-quaternary">Software Engineer</span> from <span class="tw-font-robotomono tw-font-bold tw-text-primary hover:tw-text-quaternary">Kosovo</span> 🇽🇰</h4>
                 <div class="tw-w-full tw-h-fit tw-flex tw-justify-center tw-items-center tw-px-14 md:tw-px-28">
                     <button class="tw-w-fit tw-h-fit tw-font-robotomono tw-font-medium tw-text-base tw-bg-primary hover:tw-bg-quaternary tw-text-white tw-rounded-[5px] tw-py-4 tw-px-10">Contact Me</button>
                 </div>
             </div>
-            <div #elementTwo class="tw-w-full tw-h-screen tw-scroll-m-20 tw-pl-8 md:tw-pl-16 tw-pr-14 md:tw-pr-28 scroll-snap-item">
+            <div #elementTwo class="tw-w-full tw-h-screen tw-pl-8 md:tw-pl-16 tw-pr-14 md:tw-pr-28 scroll-snap-item">
                 <h4 class="tw-w-full tw-h-fit tw-font-robotomono tw-font-medium tw-text-xl tw-text-white tw-mb-8">Skills</h4>
                 <div class="tw-w-full tw-h-fit tw-max-h-[70vh] tw-flex tw-flex-col md:tw-flex-row md:tw-flex-wrap tw-gap-4 tw-overflow-auto tw-pr-2">
                     <div *ngFor="let skill of skills" class="max-md:tw-flex-1 md:tw-grow tw-bg-white tw-flex tw-justify-center tw-items-center tw-rounded-[5px] tw-p-4">
