--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -35,4 +35,7 @@
 
 .scroll-snap-item{
     scroll-snap-align: start;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important; 
+    -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important; 
+    outline: none !important;
 }
