--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div #elementTwo class="tw-w-full tw-h-screen tw-pl-8 md:tw-pl-16 tw-pr-14 md:tw-pr-28 scroll-snap-item">
-                <div class="tw-w-full tw-h-20"></div>
+                <div class="tw-w-full tw-h-20">test</div>
                 <h4 class="tw-w-full tw-h-fit tw-font-robotomono tw-font-medium tw-text-xl tw-text-white tw-mb-8">Skills</h4>
                 <div class="tw-w-full tw-h-fit max-md:tw-max-h-[65vh] tw-flex tw-flex-col md:tw-flex-row md:tw-flex-wrap tw-gap-4 tw-overflow-auto tw-pr-2">
                     <div *ngFor="let skill of skills" class="max-md:tw-flex-1 md:tw-grow tw-bg-white tw-flex tw-justify-center tw-items-center tw-rounded-[5px] tw-p-4">
@@ -40,10 +40,10 @@
                 </div>
             </div>
             <div #elementThree class="tw-w-full tw-h-screen scroll-snap-item">
-                <div class="tw-w-full tw-h-20"></div>
+                <div class="tw-w-full tw-h-20">test</div>
             </div>
             <div #elementFour class="tw-w-full tw-h-screen scroll-snap-item">
-                <div class="tw-w-full tw-h-20"></div>
+                <div class="tw-w-full tw-h-20">test</div>
             </div>
         </div>
         <div class="tw-w-fit tw-h-screen tw-flex tw-flex-col tw-justify-center tw-items-center tw-gap-4 tw-fixed tw-right-0 tw-px-4 tw-z-40 -tw-mt-20">
