--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="tw-w-full tw-h-full tw-relative">
+<div class="tw-w-full tw-h-full tw-relative tw-flex tw-flex-col">
 
     <!-- Background Animation -->
     <div class="tw-w-full tw-h-screen tw-flex tw-items-center tw-fixed tw-top-0 tw-overflow-hidden">
@@ -11,7 +11,7 @@
     </div>
 
     <!-- Toolbar -->
-    <div class="tw-w-full tw-h-fit tw-fixed tw-top-0 tw-flex tw-justify-between tw-items-center tw-z-50">
+    <div class="tw-w-full tw-h-fit tw-sticky tw-top-0 tw-flex tw-justify-between tw-items-center tw-z-50">
         <img class="tw-w-20 tw-h-20 tw-object-contain tw-mx-4" src="assets/icons/logo.svg"/>
         <p class="tw-font-inter tw-font-medium tw-text-base tw-mx-4 md:tw-mx-8">
             <span (click)="setLanguage(lang)" [ngClass]="selectedLanguage == lang ? 'tw-text-primary hover:tw-text-quaternary' : 'tw-text-white hover:tw-text-gray'" *ngFor="let index = index; let lang of languages">{{lang | uppercase}}<span class="tw-text-white hover:tw-text-white tw-px-2" *ngIf="(index + 1) < languages.length">/</span></span>
@@ -19,15 +19,15 @@
     </div>
 
     <!-- Content -->
-    <div class="tw-w-full tw-h-fit tw-flex tw-overflow-hidden">
-        <div (scroll)="onScroll($event)" class="tw-w-full tw-max-h-screen tw-overflow-auto scrollbar-hide tw-z-30 scroll-snap-container">
-            <div #elementOne class="tw-w-full tw-h-screen tw-flex tw-flex-col tw-justify-evenly scroll-snap-item">
+    <div class="tw-flex-1 tw-flex tw-overflow-hidden">
+        <div (scroll)="onScroll($event)" class="tw-w-full tw-h-full tw-overflow-auto scrollbar-hide tw-z-30 scroll-snap-container">
+            <div #elementOne class="tw-w-full tw-h-full tw-flex tw-flex-col tw-justify-evenly scroll-snap-item">
                 <h4 class="tw-w-full tw-h-fit tw-font-inter tw-font-medium tw-text-2xl tw-text-white tw-tracking-wide tw-leading-loose tw-pl-8 md:tw-pl-16 tw-pr-14 md:tw-pr-28"><span class="tw-text-3xl">👋</span> {{'hey-there' | translate}}, I'm <span class="tw-font-robotomono tw-font-bold tw-text-primary hover:tw-text-quaternary">Atdhe Bajrami</span> a <span class="tw-font-robotomono tw-font-bold tw-text-primary hover:tw-text-quaternary">Software Engineer</span> from <span class="tw-font-robotomono tw-font-bold tw-text-primary hover:tw-text-quaternary">Kosovo</span> 🇽🇰</h4>
                 <div class="tw-w-full tw-h-fit tw-flex tw-justify-center tw-items-center tw-px-14 md:tw-px-28">
                     <button class="tw-w-fit tw-h-fit tw-font-robotomono tw-font-medium tw-text-base tw-bg-primary hover:tw-bg-quaternary tw-text-white tw-rounded-[5px] tw-py-4 tw-px-10">Contact Me</button>
                 </div>
             </div>
-            <div #elementTwo class="tw-w-full tw-h-screen tw-pl-8 md:tw-pl-16 tw-pr-14 md:tw-pr-28 scroll-snap-item">
+            <div #elementTwo class="tw-w-full tw-h-full tw-pl-8 md:tw-pl-16 tw-pr-14 md:tw-pr-28 scroll-snap-item">
                 <h4 class="tw-w-full tw-h-fit tw-font-robotomono tw-font-medium tw-text-xl tw-text-white tw-mb-8">Skills</h4>
                 <div class="tw-w-full tw-h-fit max-md:tw-max-h-[65vh] tw-flex tw-flex-col md:tw-flex-row md:tw-flex-wrap tw-gap-4 tw-overflow-auto tw-pr-2">
                     <div *ngFor="let skill of skills" class="max-md:tw-flex-1 md:tw-grow tw-bg-white tw-flex tw-justify-center tw-items-center tw-rounded-[5px] tw-p-4">
@@ -38,14 +38,18 @@
                     </div>
                 </div>
             </div>
-            <div #elementThree class="tw-w-full tw-h-screen scroll-snap-item"></div>
-            <div #elementFour class="tw-w-full tw-h-screen scroll-snap-item"></div>
+            <div #elementThree class="tw-w-full tw-h-full tw-pl-8 md:tw-pl-16 tw-pr-14 md:tw-pr-28 scroll-snap-item">
+
+            </div>
+            <div #elementFour class="tw-w-full tw-h-full tw-pl-8 md:tw-pl-16 tw-pr-14 md:tw-pr-28 scroll-snap-item">
+
+            </div>
         </div>
-        <div class="tw-w-fit tw-h-screen tw-flex tw-flex-col tw-justify-center tw-items-center tw-gap-4 tw-fixed tw-right-0 tw-px-4 tw-z-40">
-            <div (click)="scrollToElement(elementOneRef)" [ngClass]="currentPosition == 0 ? 'tw-w-6 tw-h-[2px] tw-bg-primary hover:tw-bg-quaternary' : 'tw-w-4 tw-h-[1px] tw-bg-white hover:tw-bg-gray'"></div>
-            <div (click)="scrollToElement(elementTwoRef)" [ngClass]="currentPosition == 1 ? 'tw-w-6 tw-h-[2px] tw-bg-primary hover:tw-bg-quaternary' : 'tw-w-4 tw-h-[1px] tw-bg-white hover:tw-bg-gray'"></div>
-            <div (click)="scrollToElement(elementThreeRef)" [ngClass]="currentPosition == 2 ? 'tw-w-6 tw-h-[2px] tw-bg-primary hover:tw-bg-quaternary' : 'tw-w-4 tw-h-[1px] tw-bg-white hover:tw-bg-gray'"></div>
-            <div (click)="scrollToElement(elementFourRef)" [ngClass]="currentPosition == 3 ? 'tw-w-6 tw-h-[2px] tw-bg-primary hover:tw-bg-quaternary' : 'tw-w-4 tw-h-[1px] tw-bg-white hover:tw-bg-gray'"></div>
+        <div class="tw-w-fit tw-h-screen tw-flex tw-flex-col tw-justify-center tw-items-center tw-gap-4 tw-fixed tw-right-0 tw-px-4 tw-z-40 -tw-mt-20">
+            <div (click)="scrollToElement(elementOneRef)" [ngClass]="currentPosition == 0 ? 'tw-w-6 tw-h-[2px] tw-bg-primary' : 'tw-w-4 tw-h-[1px] tw-bg-white'"></div>
+            <div (click)="scrollToElement(elementTwoRef)" [ngClass]="currentPosition == 1 ? 'tw-w-6 tw-h-[2px] tw-bg-primary' : 'tw-w-4 tw-h-[1px] tw-bg-white'"></div>
+            <div (click)="scrollToElement(elementThreeRef)" [ngClass]="currentPosition == 2 ? 'tw-w-6 tw-h-[2px] tw-bg-primary' : 'tw-w-4 tw-h-[1px] tw-bg-white'"></div>
+            <div (click)="scrollToElement(elementFourRef)" [ngClass]="currentPosition == 3 ? 'tw-w-6 tw-h-[2px] tw-bg-primary' : 'tw-w-4 tw-h-[1px] tw-bg-white'"></div>
         </div>
     </div>
 </div>
