--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -22,13 +22,13 @@
     <div class="tw-flex-1 tw-flex tw-overflow-hidden">
         <div (scroll)="onScroll($event)" class="tw-w-full tw-h-full tw-overflow-auto scrollbar-hide tw-z-30 scroll-snap-container">
             <div #elementOne class="tw-w-full tw-h-full tw-flex tw-flex-col tw-justify-evenly scroll-snap-item">
-                <h4 class="tw-w-full tw-h-fit tw-font-inter tw-font-medium tw-text-2xl tw-text-white tw-tracking-wide tw-leading-loose tw-pl-8 md:tw-pl-16 tw-pr-14 md:tw-pr-28"><span class="tw-text-3xl">👋</span> {{'hey-there' | translate}}, I'm <span class="tw-font-robotomono tw-font-bold tw-text-primary hover:tw-text-quaternary">Atdhe Bajrami</span> a <span class="tw-font-robotomono tw-font-bold tw-text-primary hover:tw-text-quaternary">Software Engineer</span> from <span class="tw-font-robotomono tw-font-bold tw-text-primary hover:tw-text-quaternary">Kosovo</span> 🇽🇰</h4>
+                <h4 class="tw-w-full tw-h-fit tw-font-inter tw-font-medium tw-text-2xl tw-text-white tw-tracking-wide tw-leading-loose tw-pl-8 md:tw-pl-16 tw-pr-14 md:tw-pr-28"><span class="tw-text-3xl">👋</span> {{'hey-there' | translate}}, {{'i-am' | translate}} <span class="tw-font-robotomono tw-font-bold tw-text-primary hover:tw-text-quaternary">{{'name-surname' | translate}}</span> {{'a' | translate}} <span class="tw-font-robotomono tw-font-bold tw-text-primary hover:tw-text-quaternary">{{'software-engineer' | translate}}</span> {{'from' | translate}} <span class="tw-font-robotomono tw-font-bold tw-text-primary hover:tw-text-quaternary">{{'country' | translate}}</span> {{'country-code' | translate}}</h4>
                 <div class="tw-w-full tw-h-fit tw-flex tw-justify-center tw-items-center tw-px-14 md:tw-px-28">
-                    <button class="tw-w-fit tw-h-fit tw-font-robotomono tw-font-medium tw-text-base tw-bg-primary hover:tw-bg-quaternary tw-text-white tw-rounded-[5px] tw-py-4 tw-px-10">Contact Me</button>
+                    <button (click)="goToContact()" class="tw-w-fit tw-h-fit tw-font-robotomono tw-font-medium tw-text-base tw-bg-primary hover:tw-bg-quaternary tw-text-white tw-rounded-[5px] tw-py-4 tw-px-10">{{'contact-me' | translate}}</button>
                 </div>
             </div>
             <div #elementTwo class="tw-w-full tw-h-full tw-pl-8 md:tw-pl-16 tw-pr-14 md:tw-pr-28 scroll-snap-item">
-                <h4 class="tw-w-full tw-h-fit tw-font-robotomono tw-font-medium tw-text-xl tw-text-white tw-mb-8">Skills</h4>
+                <h4 class="tw-w-full tw-h-fit tw-font-robotomono tw-font-medium tw-text-xl tw-text-white tw-mb-8">{{'skills' | translate}}</h4>
                 <div class="tw-w-full tw-h-fit max-md:tw-max-h-[65vh] tw-flex tw-flex-col md:tw-flex-row md:tw-flex-wrap tw-gap-4 tw-overflow-auto tw-pr-2">
                     <div *ngFor="let skill of skills" class="max-md:tw-flex-1 md:tw-grow tw-bg-white tw-flex tw-justify-center tw-items-center tw-rounded-[5px] tw-p-4">
                         <img class="tw-w-10 tw-h-10 tw-object-contain tw-mr-4" [src]="skill.iconPath"/>
@@ -38,11 +38,43 @@
                     </div>
                 </div>
             </div>
-            <div #elementThree class="tw-w-full tw-h-full tw-pl-8 md:tw-pl-16 tw-pr-14 md:tw-pr-28 scroll-snap-item">
-
+            <div #elementThree class="tw-w-full tw-h-full tw-flex tw-flex-col tw-pb-20 tw-pl-8 md:tw-pl-16 tw-pr-14 md:tw-pr-28 scroll-snap-item">
+                <h4 class="tw-w-full tw-h-fit tw-font-robotomono tw-font-medium tw-text-xl tw-text-white tw-mb-8">{{'top-pick-project' | translate}}</h4>
+                <div class="tw-flex-1 tw-overflow-auto tw-pr-2">
+                    <h4 class="tw-w-full tw-h-fit tw-font-robotomono tw-font-medium tw-text-lg tw-text-white tw-mb-4">{{project.title}}</h4>
+                    <div class="tw-w-full tw-h-fit tw-flex tw-flex-col md:tw-flex-row-reverse md:tw-gap-6">
+                        <div class="tw-flex-1">
+                            <img class="tw-w-full tw-h-32 md:tw-h-64 tw-object-cover tw-rounded-[5px] tw-mb-4" [src]="project.imagePath"/>
+                        </div>
+                        <div class="tw-flex-1">
+                            <p class="tw-w-full tw-h-fit tw-font-robotomono tw-font-normal tw-text-sm tw-text-white tw-mb-4">{{'project-text1' | translate}}</p>
+                            <h4 class="tw-w-full tw-h-fit tw-font-inter tw-font-medium tw-text-base tw-text-primary tw-mb-4">{{'about-the-project' | translate}}</h4>
+                            <p class="tw-w-full tw-h-fit tw-font-robotomono tw-font-normal tw-text-sm tw-text-white tw-mb-4">{{'project-text2' | translate}}</p>
+                            <h4 class="tw-w-full tw-h-fit tw-font-inter tw-font-medium tw-text-base tw-text-primary tw-mb-4">{{'tech-stack' | translate}}</h4>
+                            <div class="tw-w-full tw-h-fit tw-max-w-xl tw-flex tw-flex-wrap tw-gap-2 tw-mb-4">
+                                <h4 class="tw-w-fit tw-h-fit tw-font-robotomono tw-font-medium tw-text-xs tw-bg-primary tw-text-white tw-rounded-[5px] tw-p-2" *ngFor="let tech of project.techStack">{{tech}}</h4>
+                            </div>
+                            <h4 class="tw-w-full tw-h-fit tw-font-inter tw-font-medium tw-text-base tw-text-primary tw-mb-4">{{'platforms' | translate}}</h4>
+                            <div class="tw-w-full tw-h-fit tw-flex tw-flex-col md:tw-flex-row tw-gap-4">
+                                <a class="tw-w-full tw-h-fit md:tw-w-fit tw-flex tw-justify-center tw-items-center tw-bg-white tw-rounded-[5px] tw-gap-4 tw-p-4" *ngFor="let platform of project.platforms" [href]="platform.link" target="_blank">
+                                    <img class="tw-w-6 tw-h-6 tw-object-contain tw-fill-primary" [src]="platform.iconPath"/>
+                                    <h4 class="tw-w-fit tw-h-fit tw-font-robotomono tw-font-medium tw-text-sm tw-text-primary">{{platform.title | translate}}</h4>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div #elementFour class="tw-w-full tw-h-full tw-pl-8 md:tw-pl-16 tw-pr-14 md:tw-pr-28 scroll-snap-item">
-
+                <h4 class="tw-w-full tw-h-fit tw-font-robotomono tw-font-medium tw-text-xl tw-text-white tw-mb-8">{{'contact-me' | translate}}</h4>
+                <div class="tw-w-full tw-h-fit max-md:tw-max-h-[65vh] tw-flex tw-flex-col md:tw-flex-wrap tw-gap-4 tw-overflow-auto tw-pr-2">
+                    <a *ngFor="let contact of contacts" [href]="contact.link" target="_blank" class="max-md:tw-flex-1 md:tw-grow md:tw-max-w-xs tw-bg-white tw-flex tw-justify-center tw-items-center tw-rounded-[5px] tw-p-4">
+                        <img class="tw-w-10 tw-h-10 tw-object-contain tw-mr-4" [src]="contact.iconPath"/>
+                        <div class="tw-flex-1">
+                            <p class="tw-w-full tw-h-fit tw-font-robotomono tw-font-medium tw-text-lg tw-text-black">{{contact.title}}</p>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
         <div class="tw-w-fit tw-h-screen tw-flex tw-flex-col tw-justify-center tw-items-center tw-gap-4 tw-fixed tw-right-0 tw-px-4 tw-z-40 -tw-mt-20">
